k8s/overlays/prod/backend-volume-patch-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
spec:
  template:
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: backend
          volumeMounts:
            - name: db-storage
              mountPath: /app/data
